--- a/Project Files/index.html
+++ b/Project Files/index.html
@@ -33,7 +33,7 @@
 			</div>	
 		</div>
 	</div> <!-- close container-->
-	<!--add a comment-->
+	<!--add a comment direct add from Coda-->
 	
   </section>
 
